Fixed issue of min-width not working on small screens, fixed issue with prev/next five and copy forward appearing at wrong times

--- a/css/postLoginUI.css
+++ b/css/postLoginUI.css
@@ -212,7 +212,8 @@
                 display: none;
             }
 
-            .submit-forms {
+            .next-five, .prev-five {
+                display: none;
             }
 
         
